# pyseesaw

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: matrix_analysis_demo.py  seesaw_vs_inverse_comparison.py  symbolic_seesaw_analysis.py
notebooks/: neutrino_mass_exploration.ipynb  seesaw_2_active_1_sterile.ipynb  seesaw_3_active_1_sterile.ipynb  seesaw_one_generation.ipynb
src/: __init__.py  inverse_seesaw.py  matrix_utils.py  pmns_matrix.py  seesaw.py  visualization.py
tests/: test_matrix_utils.py
